Update landing page

--- a/bims/static/css/base.css
+++ b/bims/static/css/base.css
@@ -55,7 +55,7 @@ h6 {
 
 .btn-primary:hover, .btn-primary:focus, .btn-primary:active {
   color: #fff;
-  background-color: #678155 !important;
+  background-color: #0c7c6e !important;
 }
 
 .btn-primary:active, .btn-primary:focus {
