--- a/bims/templates/bims/blog_page.html
+++ b/bims/templates/bims/blog_page.html
@@ -7,7 +7,7 @@
     {{ self.title }}
 {% endblock %}
 
-{% block head %}
+{% block pre-head %}
 
     <link href="{% static "css/clean-blog.css" %}" rel="stylesheet">
     <style>
