--- a/bims/templates/main_base.html
+++ b/bims/templates/main_base.html
@@ -15,6 +15,7 @@
     <link href="{% static "js/libs/bootstrap-4.0.0/css/bootstrap.min.css" %}" rel="stylesheet">
     <link href="{% static "js/libs/font-awesome/css/font-awesome.min.css" %}" rel="stylesheet">
 
+    {% block pre-head %} {% endblock %}
     <link href="{% static "css/base.css" %}" rel="stylesheet">
     <link href="{% static "css/navbar.css" %}" rel="stylesheet">
     <link href="{% static "css/main.css" %}" rel="stylesheet">
