--- a/bims/templates/bims/manual_page.html
+++ b/bims/templates/bims/manual_page.html
@@ -48,7 +48,7 @@
     <div style="margin-top:120px"></div>
     <div class="container" style="min-height: 500px; margin-bottom: 50px;">
         <div class="row">
-            <div class="col-3">
+            <div class="col-lg-3 col-md-4 col-xs-12">
                 <div class="card menu-container">
                     <div class="card-header">
                         {% if self.get_ancestors|length > 1 %}
@@ -62,7 +62,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-9">
+            <div class="col-lg-9 col-md-8 col-xs-12">
                 <nav aria-label="breadcrumb">
                     <ol class="breadcrumb">
                         {% for ancestor in self.get_ancestors|slice:"1:" %}
