--- a/bims/templates/navigation_bar.html
+++ b/bims/templates/navigation_bar.html
@@ -1,3 +1,4 @@
+{% load site %}
 {#<nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">#}
 {#    <div class="container">#}
 {#        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target=".navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">#}
@@ -74,7 +75,8 @@
 
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
     <div class="container">
-        <a class="navbar-brand bims-title-big" href="/">BIMS</a>
+        {% current_domain as domain_name %}
+        <a class="navbar-brand bims-title-big" href="{{ domain_name }}/">BIMS</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse"
                 data-target="#navbarCollapse" aria-controls="navbarCollapse"
                 aria-expanded="false" aria-label="Toggle navigation">
@@ -83,22 +85,30 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="/map">Map</a>
+                    <a class="nav-link" href="{{ domain_name }}/map">Map</a>
                 </li>
+                {%  if preferences.SiteSetting.blog_page_link %}
                  <li class="nav-item active">
-                    <a class="nav-link" href="/blog/">Blog</a>
-                </li>
+                    <a class="nav-link" href="{{ preferences.SiteSetting.blog_page_link }}">Blog</a>
+                 </li>
+                {% endif %}
+                {%  if preferences.SiteSetting.docs_page_link %}
+                 <li class="nav-item active">
+                    <a class="nav-link" href="{{ preferences.SiteSetting.docs_page_link }}">Docs</a>
+                 </li>
+                 {% endif %}
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#"
                        id="dropdown01" data-toggle="dropdown"
                        aria-haspopup="true" aria-expanded="false">About</a>
                     <div class="dropdown-menu" aria-labelledby="dropdown01">
-                        <a class="dropdown-item" href="/contact/">Contact</a>
-                        <a class="dropdown-item" href="/pages/about_us/">About Us</a>
+                        <a class="dropdown-item" href="{{ domain_name }}/contact/">Contact</a>
+                        <a class="dropdown-item" href="{{ domain_name }}/pages/about_us/">About Us</a>
                     </div>
                 </li>
             </ul>
         </div>
+        {% if request.get_host in domain_name %}
         <div class="navbar-collapse collapse w-50 order-3 dual-collapse2">
             <ul class="navbar-nav ml-auto">
                 {% if user.is_authenticated %}
@@ -131,6 +141,7 @@
                 {% endif %}
             </ul>
         </div>
+        {% endif %}
     </div>
 </nav>
 
